--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
                 console.log("===================================================\n");
 
                 await github.rest.repos.createRelease({
-                  draft: false,
+                  draft: true,
                   tag_name: finalVersion,
                   release_name: finalVersion,
                   generate_release_notes: true,
