Update from https://github.com/infranyx/protobuf-template/commit/d2ac98f393a88f6980f66d4e18213c5030f55d0f

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
                     repo: context.repo.repo,
                 });
                 const tags = response.data.map(tag => tag.name.toLowerCase());
-
+                console.log(tags);
                 let latestVersion;
                 if (tags.length === 0) latestVersion = "v0.0.0";
                 else latestVersion = tags[0];
