Update from https://github.com/infranyx/protobuf-template/commit/1c11d07aa7e1b108f6632051b996d10702031b30

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,8 @@ jobs:
                 if (tags.length === 0) latestVersion = "v0.0.0";
                 else latestVersion = tags[0];
 
-                const finalVersion = semver.inc(latestVersion , "patch");
+                let finalVersion = semver.inc(latestVersion , "patch");
+                finalVersion = `v${finalVersion}`;
                 if (!finalVersion || !semver.valid(finalVersion)) {
                   throw new Error(`Invalid Final Version: ${finalVersion}`);
                 }
