Update from https://github.com/infranyx/protobuf-template/commit/39a264a9750a7ef35a26f0b56e0bf8f0135de45c

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
                   throw new Error(`Invalid Final Version: ${finalVersion}`);
                 }
 
-                console.log("\n================== Final Version * ==================");
+                console.log("\n================== Final Version ==================");
                 console.log(`final version: ${finalVersion}`);
                 console.log("===================================================\n");
 
