Update from https://github.com/infranyx/protobuf-template/commit/3c22c33f0676f922fa7b046a0398a99871f4c028

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
                 console.log("===================================================\n");
 
                 await github.rest.repos.createRelease({
-                  draft: true,
+                  draft: false,
                   tag_name: finalVersion,
                   release_name: finalVersion,
                   generate_release_notes: true,
