--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Generate, Checking breaking change and Lint buf
 
-on: push
-#on:
-#  pull_request:
-#    branches:
-#      - dev
-#    types:
-#      - closed
+on:
+  push:
+    branches:
+      - main
 
 env:
   GO_REPOSITORY: "protobuf-template-go"
