--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
                   tag_name: finalVersion,
                   release_name: finalVersion,
                   generate_release_notes: true,
-                  prerelease: false,
+                  prerelease: true,
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                 });
