--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,8 @@ jobs:
                   tag_name: finalVersion,
                   release_name: finalVersion,
                   generate_release_notes: true,
-                  prerelease: true,
+                  prerelease: false,
+                  make_latest: false,
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                 });
