Update from https://github.com/infranyx/protobuf-template/commit/8428916c421d1a8982928712b1825ffefc80bb0b

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
                   release_name: finalVersion,
                   generate_release_notes: true,
                   prerelease: false,
-                  make_latest: false,
+                  make_latest: "false",
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                 });
