--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  GO_REPOSITORY: "protobuf-template-go"
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,27 +25,29 @@ jobs:
                     repo: context.repo.repo,
                 });
                 const tags = response.data.map(tag => tag.name.toLowerCase());
-                console.log(tags);
+            
+                console.log("\n================== Pre Release ==================");
+                console.log("tags: \n" , tags , "\n");
+            
                 let latestVersion;
                 if (tags.length === 0) latestVersion = "v0.0.0";
                 else latestVersion = tags[0];
 
-                let finalVersion = semver.inc(latestVersion , "patch");
-                finalVersion = `v${finalVersion}`;
-                if (!finalVersion || !semver.valid(finalVersion)) {
-                  throw new Error(`Invalid Final Version: ${finalVersion}`);
+                let newVersion = semver.inc(latestVersion , "minor");
+                newVersion = `v${newVersion}`;
+                if (!newVersion || !semver.valid(newVersion)) {
+                  throw new Error(`Invalid New Version: ${newVersion}`);
                 }
-
-                console.log("\n================== Final Version ==================");
-                console.log(`final version: ${finalVersion}`);
+            
+                console.log("new version: " , newVersion , "\n");
                 console.log("===================================================\n");
 
                 await github.rest.repos.createRelease({
-                  draft: false,
-                  tag_name: finalVersion,
-                  release_name: finalVersion,
+                  tag_name: newVersion,
+                  release_name: newVersion,
                   generate_release_notes: true,
-                  prerelease: false,
+                  draft: false,
+                  prerelease: true,
                   make_latest: "false",
                   owner: context.repo.owner,
                   repo: context.repo.repo,
