--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -40,7 +40,7 @@ jobs:
                   throw new Error(`Invalid New Version: ${newVersion}`);
                 }
             
-                console.log("New Pre-Version: " , newVersion , "\n");
+                console.log("New Version: " , newVersion , "\n");
 
                 await github.rest.repos.createRelease({
                   tag_name: newVersion,
