--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -1,4 +1,4 @@
-name: Create Pre-Release
+name: Create Beta-Release
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - run: npm i semver@7.3.8
-      - name: Create Pre Release
+      - name: Create Beta Release
         uses: "actions/github-script@v5"
         with:
           github-token: "${{ secrets.API_TOKEN_GITHUB }}"
@@ -26,20 +26,20 @@ jobs:
                 });
                 const tags = response.data.map(tag => tag.name.toLowerCase());
             
-                console.log("\n================== Pre-Release ==================");
+                console.log("\n================== Beta-Release ==================");
                 console.log("Tags: \n" , tags , "\n");
             
                 let lastVersion;
                 if (tags.length === 0) lastVersion = "v0.0.0";
                 else lastVersion = tags[0];
 
-                let newVersion = semver.inc(lastVersion , "minor");
+                let newVersion = semver.inc(lastVersion , "patch");
                 newVersion = `v${newVersion}`;
             
                 if (!newVersion || !semver.valid(newVersion)) {
                   throw new Error(`Invalid New Version: ${newVersion}`);
                 }
-            
+
                 console.log("New Version: " , newVersion , "\n");
 
                 await github.rest.repos.createRelease({
@@ -47,13 +47,13 @@ jobs:
                   release_name: newVersion,
                   generate_release_notes: true,
                   draft: false,
-                  prerelease: true,
+                  prerelease: false,
                   make_latest: "false",
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                 });
-            
-                console.log("New Pre-Release Created: " , newVersion , "\n");
+                
+                console.log("New Beta-Release Created: " , newVersion , "\n");
                 console.log("===================================================\n");
             }
             catch (error) {
