Update from https://github.com/infranyx/protohub-template/commit/89b0f0e9ed426429dc21a2f6fbb68e3282b88e40

--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Create Major Release
         run: |
-          VERSION=$(git describe --tags $(git rev-list --tags --max-count=1))
+          VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
           VERSION=$(semver bump major $VERSION)
           git tag -a $VERSION -m "major release created" HEAD
