--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -19,9 +19,15 @@ jobs:
 
       - name: Create Major Release
         run: |
+          echo "test0"
           VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
+          echo "test1"
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
+          echo "test2"
           VERSION=$(semver bump major $VERSION)
+          echo "test3"
           git tag -a $VERSION -m "major release created" HEAD
+          echo "test4"
           git push --tags
+          echo "test5"
           echo "New Major-Release Created: ${VERSION}"
