--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Install Dependencies
         run: |
           wget -O /usr/local/bin/semver \
@@ -20,6 +22,7 @@ jobs:
       - name: Create Major Release
         run: |
           echo "test0"
+          semver --version
           git --version
           git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null
           echo "test0"
