--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -26,7 +26,9 @@ jobs:
           VERSION=$(semver bump minor $VERSION)
 
       - name: Create Release
-        uses: "actions/github-script@v5"
+        uses: "actions/github-script@v6"
+        env:
+          VERSION: VERSION
         with:
           script: |
             const version = process.env.VERSION
