--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Create Patch Version
         run: |
+          git fetch --all --tags
           VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
           echo "$VERSION"
