--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -25,7 +25,7 @@ jobs:
           VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
           echo "$VERSION"
-          VERSION=$(semver bump minor $VERSION)
+          export VERSION=$(semver bump minor $VERSION)
 
       - name: Create Release
         uses: "actions/github-script@v6"
