--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           script: |
             const { VERSION } = process.env
-            console.log(VERSION)
+            console.log(process.env)
             try{
                 if (!VERSION || !semver.valid(VERSION)) {
                   throw new Error(`Invalid New Version: ${VERSION}`);
