--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -26,6 +26,9 @@ jobs:
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
           export VERSION=$(semver bump minor $VERSION)
           echo "$VERSION"
+          
+      - name: Test Patch Version
+        run: env
 
 
       - name: Create Release
