--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -24,7 +24,7 @@ jobs:
           git fetch --all --tags
           VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
-          echo "{VERSION}=$(semver bump minor $VERSION)" >> $GITHUB_ENV
+          echo "VERSION=$(semver bump minor $VERSION)" >> $GITHUB_ENV
           echo "$VERSION"
 
       - name: Create Release
