--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -1,4 +1,4 @@
-name: Create Patch-Release
+name: Create Minor-Release
 
 on:
   push:
@@ -19,12 +19,12 @@ jobs:
                 https://raw.githubusercontent.com/fsaintjacques/semver-tool/master/src/semver
           chmod +x /usr/local/bin/semver
 
-      - name: Create Patch Version
+      - name: Create Minor Version
         run: |
           git fetch --all --tags
           VERSION=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null || echo "")
           test -z "$VERSION" && echo "no version tag found" && VERSION=v0.0.0
-          echo "VERSION=$(semver bump patch $VERSION)" >> $GITHUB_ENV
+          echo "VERSION=$(semver bump minor $VERSION)" >> $GITHUB_ENV
           echo "$VERSION"
 
       - name: Create Release
@@ -46,7 +46,7 @@ jobs:
                   repo: context.repo.repo,
                 });
                 
-                console.log("New Patch-Release Created: " , VERSION , "\n");
+                console.log("New Minor-Release Created: " , VERSION , "\n");
                 console.log("===================================================");
             }
             catch (error) {
